fix-user-table-overflow

--- a/src/pages/product-admin/ProductAdmin.css
+++ b/src/pages/product-admin/ProductAdmin.css
@@ -48,6 +48,7 @@
     .product-admin-section {
         display: flex;
         flex-direction: column;
+        overflow-x: scroll;
         width: 100%;
 
         .product-admin-table-title {
